--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <title>设计模式</title>
 </head>
 <body>
-<p>1</p>
-<p>1</p>
-<p>1</p>
-<button id="btn1"></button>
+<div id="app"></div>
 </body>
 </html>
